--- a/memory/.vscode/settings.json
+++ b/memory/.vscode/settings.json
@@ -57,6 +57,9 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "tchar.h": "c"
+    "MLTable": "yaml",
+    "*.c": "c",
+    "tchar.h": "c",
+    "scsi.h": "c"
   }
 }
